--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,13 @@
             <version>11.0.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.22</version>
+        </dependency>
+
 
     </dependencies>
     <properties>
